# task-4-onxp

./: pyproject.toml
src/group/: app.py
src/individu/django_hello/django_hello/: settings.py  urls.py  views.py
src/individu/flask_hello/: flask.py
